# onbo

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  pyproject.toml  run.sh
.claude/: PLAN3.md
.claude/skills/actions-from-code/: SKILL.md
.claude/skills/actions-from-code/examples/: actions.example.yaml
.claude/skills/kb-from-code/: SKILL.md
.claude/skills/kb-from-code/examples/: draft_faq.example.yaml
.claude/skills/kb-video/: SKILL.md  requirements.txt
.claude/skills/kb-video/bgm/: README.md
.claude/skills/kb-video/examples/: scenes.json
.claude/skills/kb-video/refs/: README.md
.claude/skills/kb-video/scripts/: kb_pipeline.py  record-walkthrough.mjs
config/: .gitignore  actions.example.yaml  actions.yaml  kb.example.yaml  seed_faq.yaml  settings.example.yaml  settings.yaml  users.example.yaml
docs/: HOWTO-1-setup.md  HOWTO-1-setup.ru.md  HOWTO-2-kb-and-chat.md  HOWTO-2-kb-and-chat.ru.md  HOWTO-3-embed-chat.md  HOWTO-3-embed-chat.ru.md  flow.mmd
docs/examples/: chat.html  onbo-widget.js
docs/examples/nuxt/: README.md
docs/examples/nuxt/plugins/: onbo.client.js
docs/examples/nuxt/server/api/assistant/: chat.post.js  confirm.post.js  token.get.js  voice.post.js  welcome.post.js
docs/examples/nuxt/server/utils/: onbo.js
docs/self/: about.md
onbo/: __init__.py  cli.py  config.py
onbo/auth/: profiles.py  tokens.py
onbo/channels/: admin_api.py  base.py  telegram.py  web.py
onbo/core/: aggregator.py  classifier.py  clock.py  llm.py  manifest.py  pipeline.py  router.py  schemas.py
onbo/demo/: __init__.py  backend.py
onbo/generator/: scan.py
onbo/handlers/: about.py  media.py  rag.py  welcome.py
onbo/handlers/actions/: base.py  change_email.py  http_action.py  index.py  lookup.py  pipeline.py  registry.py  set_language.py
onbo/kb/: admin.py  chunker.py  index.py  links.py  models.py
onbo/kb/sources/: base.py  files.py  website.py
onbo/rag/: embeddings.py  qdrant_store.py  retriever.py  store.py
onbo/state/: db.py  models.py  session.py  welcome.py
onbo/stt/: whisper.py
tests/: conftest.py  test_about.py  test_access_filter.py  test_action_index.py  test_admin_api.py  test_aggregator.py  test_classifier.py  test_clock.py  test_config.py  test_confirm.py  test_embeddings.py  test_features.py  test_http_action.py  test_kb_import.py  test_kb_links.py  test_lookup.py  test_manifest.py  test_pipelines.py  test_rag_video.py  test_router.py  test_slot_filling.py  test_stt_fallback.py  test_telegram.py  test_tokens.py  test_voice.py  test_welcome.py
