[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onbo"
version = "0.0.1"
description = "Open-source onboarding assistant for any software"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "onbo contributors" }]
keywords = ["onboarding", "assistant", "rag", "llm", "chatbot"]

# Core stays tiny so the skeleton imports and the CLI runs before heavy extras
# are installed. Everything provider-specific lives behind an optional extra
# and is imported lazily where it is used.
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.40"]
rag = ["qdrant-client>=1.9", "fastembed>=0.3"]
kb = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1", "pypdf>=4.0", "beautifulsoup4>=4.12", "httpx>=0.27"]
state = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1", "redis>=5.0"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
telegram = ["aiogram>=3.4"]
stt = ["faster-whisper>=1.0"]
all = ["onbo[llm,rag,kb,state,web,telegram,stt]"]

[project.scripts]
onbo = "onbo.cli:main"

[project.urls]
Homepage = "https://github.com/japanes/onbo"

[tool.hatch.build.targets.wheel]
packages = ["onbo"]
